--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="nickname1"> 王澳 </string>
     <string name="paragraph1"> 问具各并料感发适组米习后。头党内情例造应知代改六整已入方放。五能东斗单作红身思边毛越它。 </string>
 
+    <string name="channel_name">Hello</string>
+    <string name="channel_description">Hi</string>
+
 </resources>
