--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="channel_name">Hello</string>
     <string name="channel_description">Hi</string>
 
+    <string name="media_picker_record">Record</string>
+
 </resources>
