--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WeChat</string>
+    <string name="app_name">HotSpot</string>
     <string name="add_text">相加</string>
     <string name="add_result">0</string>
 
